--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-<form action="login.php" method="POST">
+<form action="login.php" method="GET">
 <input type="submit" value="Click me" />
 </body>
 </html>
